@@ -1,7 +1,7 @@
 {
-  "timestamp" : "2022-05-06T08:11:55Z",
-  "count" : 16,
-  "count_minmax" : [ 16, 16 ],
+  "timestamp" : "2022-05-07T00:42:28Z",
+  "count" : 17,
+  "count_minmax" : [ 16, 17 ],
   "count_prev_day_inc" : 16,
   "count_prev_day_dec" : 0,
   "uniques" : 1,
