@@ -1,5 +1,11 @@
+2022-05-07T00:42:28Z:
+* notice: last 14d: all unq: 122 1
+* notice: prev accum: outdated-all outdated-unq / all unq: 8 2 / 129 8
+* notice: next accum: outdated-all outdated-unq / all unq: 8 2 / 130 8
+* notice: prev json diff // prev day diff: unq all: +0 +1 / -0 -0 // +0 +1 / -0 -0
+
 2022-05-06T08:11:55Z:
 * notice: last 14d: all unq: 121 1
 * notice: prev accum: outdated-all outdated-unq / all unq: 8 2 / 113 7
 * notice: next accum: outdated-all outdated-unq / all unq: 8 2 / 129 8
-* notice: prev json diff // prev day diff: unq all: +1 +16 / -0 -0 // +1 +16 / -0 -0
+* notice: prev json diff // prev day diff: unq all: +1 +16 / -0 -0 // +1 +16 / -0 -0
